--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="google-site-verification"
+      content="fnbMPpdS_xlLgK2BFT5BA8tynFPWGbGST0wyJg1xYM0"
+    />
 
     <script defer src="/build/bundle.js"></script>
   </head>
