extra future added

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
       name="google-site-verification"
       content="fnbMPpdS_xlLgK2BFT5BA8tynFPWGbGST0wyJg1xYM0"
     />
+    <meta
+      name="description"
+      content="Prathamesh Hatkar Portfolio,
+    Illustration of personal projects in the field of web-design and web developement"
+    />
 
     <script defer src="/build/bundle.js"></script>
   </head>
