--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" /> -->
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <title>Prathamesh Hatkar</title>
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <meta
       name="google-site-verification"
       content="fnbMPpdS_xlLgK2BFT5BA8tynFPWGbGST0wyJg1xYM0"
